--- a/index.html
+++ b/index.html
@@ -43,19 +43,10 @@ cursor{
 
 </head>
 <body>
-<div id="container"></div>
-        <!-- <canvas> </canvas> -->
+        <canvas> </canvas>
     
- <!-- <script src="./index.js"> -->
- <!-- <script src="./index.1.js"> -->
-    <script>
-        const cont= document.getElementById("container");
-        // console.log(cont.clientWidth)
-        // console.log(cont.offsetWidth)
-        // console.log(cont.width)
-        console.log(window.innerWidth)
-        console.log(window.outerWidth)
-        console.log(cont.width)
+ <script src="./index.js">
+     
 </script>    
 </body>
 </html>
